metadata/force-app/main/default/objects/CustomName_fmDDA__c/CustomName_fmDDA__c.object-meta.xml
<CustomObject>
    <description>Description_wzUlJ</description>
    <label>CustomLabel_TRdjC</label>
    <nameField>
        <label>CustomLabel_TRdjC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_TRdjCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>