metadata/force-app/main/default/objects/CustomName_fmDDA__c/fields/CustomField_DsOpj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DsOpj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRapiO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>