metadata/force-app/main/default/objects/CustomName_fmDDA__c/fields/CustomField_eNyEz__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eNyEz__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqQikY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>